# Open-innovation-hack-mty

./: .gitignore  CONFIGURACION_COOLIFY.md  CONFIGURACION_COOLIFY_FRONTEND.md  CONFIGURACION_COOLIFY_PASO_A_PASO.md  DEBUG_VOZ.md  EXPLICACION_MCP_ENDPOINTS.md  README.md  RESUMEN_FIXES_COMPLETO.md  RESUMEN_SOLUCION.md  SOLUCION_DEPLOYMENT_FRONTEND.md  SOLUCION_ERROR_REGISTRY.md  package-lock.json  push_frontend_fix.ps1
backend/: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  EJECUTAR_AHORA.md  INSTRUCCIONES_HTTP_SERVER.md  INSTRUCCIONES_RAPIDAS.md  QUICKSTART.md  README.md  claude_desktop_config.json  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  requirements.txt  run_server.py  start_http_server.py  start_server.bat  start_server.ps1  test_fastmcp_simple.py  test_http_server.py  test_mcp_http.py  test_production.py
backend/.coolify/: deploy.sh
backend/scripts/: __init__.py  load_data.py  test_connection.py
backend/src/: __init__.py  http_server.py  mcp_http_server.py  mcp_server.py
backend/src/database/: __init__.py  connection.py  queries.py
backend/src/tools/: __init__.py  analytics_tools.py  balance_tools.py  descriptive_tools.py  planning_tools.py  predictive_tools.py  projection_tools.py  risk_tools.py
backend/src/tools/financial/: __init__.py  analytics.py  budget.py  descriptive.py  expense.py  financial_plan.py  investment.py  orchestrator.py  planning.py  predictive.py  projection.py  risk.py  shortcuts.py
backend/src/tools/text/: __init__.py  (+2 more)
backend/src/utils/: __init__.py  logger.py  validators.py
(+65 files in other folders)
